# Recode

./: .gitignore  .hgignore  AUTHORS  BACKLOG  COPYING-LIB  ChangeLog  File-Latin1  Makefile.am  Makefile.in  Makefile.os2  NEWS  PATCHES-AC  README  README-alpha  README.DOS  README.org  TAGS  THANKS  TODO  acconfig.h  aclocal.m4  aclocal.sh  after-git.py  after-git.sh  after-patch.py  after-patch.sh  applemac.c  argmatch.c  ascilat1.l  atarist.c  bangbang.c  cdcnos.c  charname.c  charname.h  charname.pl  charname.sed  charset.c  charset.pl  charset.sed  charset.texi  (+40 more)
contrib/: ChangeLog  Makefile.am  Makefile.in  README  djgpp-README  djgpp-diffs  lib-Makefile.Amiga  recode.el  recode.spec  recode.spec1  recode.spec2  src-Makefile.Amiga  utf8.el
contrib/DJGPP/: README  README.in  config.site  configdj.bat  configdj.sed  fnchange.in  fnchange.lst
doc/: ChangeLog  File-Latin1  Makefile.am  Makefile.in  Makemore  charset.texi  fr-libiconv.texi  help2man  libiconv.texi  recode.1  recode.info  recode.info-1  recode.info-2  recode.info-3  recode.info-4  recode.info-5  recode.info-6  recode.info-7  recode.texi  rfc1345.texi  stamp-vti  tables.pl  tables.py  version.texi
i18n/: ChangeLog  Makefile.am  Makefile.in  da.mo  da.po  de.mo  de.po  el.mo  el.po  es.mo  es.po  fr.mo  fr.po  gl.mo  gl.po  it.mo  it.po  nl.mo  nl.po  pl.mo  pl.po  pt.mo  pt.po  recode.pot  sl.mo  sl.po  sv.mo  sv.po
keld/: NomsSeulsfinal.lst  charsets.def  control.def  iso10646.def  mnemonics,ds  other.def  rfc1345.txt
lib/: ChangeLog  Makefile.am  Makefile.in  gettext.c  gettext.h  xstring.h
libiconv/: ChangeLog  Makefile.am  Makefile.in  README  aliases.h  armscii_8.h  ascii.h  big5.h  big5hkscs.h  ces_big5.h  ces_gbk.h  cjk_variants.h  cns11643.h  cns11643_1.h  cns11643_2.h  cns11643_3.h  cns11643_inv.h  converters.h  cp1133.h  cp1250.h  cp1251.h  cp1252.h  cp1253.h  cp1254.h  cp1255.h  cp1256.h  cp1257.h  cp1258.h  cp850.h  cp866.h  cp874.h  cp932.h  cp932ext.h  cp936ext.h  cp949.h  cp950.h  cp950ext.h  encodings.def  encodings_local.def  euc_cn.h  (+95 more)
m4/: .gitignore  ChangeLog  Makefile.am  Makefile.in  atconfig.m4  flex.m4  gettext.m4  gnulib-cache.m4  gnulib-comp.m4  libtool.m4  malloc.m4  microsoft.m4  nls.m4  realloc.m4  utimbuf.m4
po/: ChangeLog  LINGUAS  Makefile.in  Makevars  POTFILES.in  af.po  be.gmo  be.po  bg.po  ca.gmo  ca.po  cat-id-tbl.c  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.po  eu.po  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  (+35 more)
python/: ChangeLog  Makefile  Makefile.am  Makefile.in  Recode.pyx  setup.py
src/: ChangeLog  Makefile.am  Makefile.in  african.c  afrtran.c  ansi2knr.c  applemac.c  ascilat1.l  atarist.c  bangbang.c  base64.c  base64.h  cdcnos.c  charname.c  charname.h  combine.c  common.h  debug.c  decsteps.h  dump.c  ebcdic.c  endline.c  endline.h  flat.c  fr-charname.c  fr-charname.h  freeze.c  hash.c  hash.h  html.c  ibmpc.c  iconqnx.c  iconv.c  iconvdecl.h  inisteps.h  java.c  lat1asci.c  lat1ltex.c  lat1texi.c  lat1txte.c  (+39 more)
tests/: ChangeLog  Makefile.am  Makefile.in  NOTES  Recode.c  Recode.pyx  african.m4  atconfig.in  atgeneral.m4  base64.m4  bigauto.pl  bigauto.py  bigauto.sh  combine.m4  common.py  debug.m4  dumps-data  dumps.m4  lists.m4  methods.m4  names.m4  pytest  quoted-data  quoted.m4  setup.py.in  suite.m4  t21_names.py  t22_lists.py  t25_subsets.py  t30_base64.py  t30_dumps.py  t30_quoted.py  t40_african.py  t40_combine.py  t40_java.py  t40_testdump.py  t40_utf7.py  t40_utf8.py  t50_methods.py  t70_inferenz.py  (+6 more)
